# gejengel

./: .gitmodules  CMakeLists.txt  ChangeLog  MakeRelease.sh  ProjectHome.md  README  TODO  config.h.in  faq.md  gejengel.sublime-project  gejengel.sublime-workspace  screenshots.md
data/: albumartist.patch.bz2  gejengel.desktop.in  main.c  main.cpp
data/gfx/: cdcase.xcf  file2array.py
data/web/: download.html  index.html  screenshots.html
data/web/css/: ie.css  style.css
inc/FLAC++/: decoder.h  metadata.h
inc/lastfmlib/: lastfmclient.h  lastfmscrobbler.h  urlclient.h
inc/lastfmlib/utils/: condition.h  mutex.h  scopedlock.h  stringoperations.h  thread.h  types.h
include/FLAC++/: encoder.h
include/lastfmlib/: lastfmclient.cpp  lastfmexceptions.h  lastfmscrobblerc.h  lastfmtypes.h  nowplayinginfo.h  submissioninfo.h  submissioninfocollection.h
include/lastfmlib/utils/: log.h  numericoperations.h
lib/: CORE_RL_Magick++_.lib  CORE_RL_bzlib_.lib  CORE_RL_jpeg_.lib  CORE_RL_lcms_.lib  CORE_RL_libxml_.lib  CORE_RL_magick_.lib  CORE_RL_png_.lib  CORE_RL_tiff_.lib  CORE_RL_ttf_.lib  CORE_RL_wand_.lib  CORE_RL_xlib_.lib  CORE_RL_zlib_.lib  libFLAC++_dynamic.lib  libFLAC++_static.lib  libFLAC_dynamic.lib  libmad.lib  libupnp.lib  sqlite3.lib  tag.lib
po/: CMakeLists.txt  LINGUAS  POTFILES.in  es.po  nl.po
src/: CMakeLists.txt  Gejengel.sln  Gejengel.vcxproj  gtkmm-vc100-2_4.props  gtkmm-vc100-d-2_4.props  main.cpp  tags  winconfig.h
src/AudioDecoder/: AudioDecoder.vcxproj  audiodecoder.h  audiodecoderfactory.cpp  audiodecoderfactory.h  ffmpegdecoder.cpp  ffmpegdecoder.h  filereader.cpp  filereader.h  flacdecoder.cpp  flacdecoder.h  httpreader.cpp  httpreader.h  maddecoder.cpp  maddecoder.h  mpegutils.cpp  mpegutils.h  reader.h  readerfactory.cpp  readerfactory.h
src/AudioRenderer/: AudioRenderer.vcxproj  alsarenderer.cpp  alsarenderer.h  audiobuffer.cpp  audiobuffer.h  audioformat.h  audioframe.cpp  audioframe.h  audiorenderer.cpp  audiorenderer.h  audiorendererfactory.cpp  audiorendererfactory.h  openalrenderer.cpp  openalrenderer.h  pulserenderer.cpp  pulserenderer.h
src/Core/: Core.vcxproj  albumartgrabber.cpp  albumartgrabber.h  albumartprovider.h  commonstrings.h  gejengel.cpp  gejengel.h  gejengelcore.h  gejengelplugin.cpp  gejengelplugin.h  gejengeltypes.h  gstreamerengine.cpp  gstreamerengine.h  libraryaccess.cpp  libraryaccess.h  playback.cpp  playback.h  playbackengine.h  playbackenginefactory.cpp  playbackenginefactory.h  playqueue.cpp  playqueue.h  pluginmanager.cpp  pluginmanager.h  settings.cpp  settings.h  statusreporter.h  upnpserversettings.cpp  upnpserversettings.h
src/MusicLibrary/: MusicLibrary.vcxproj  album.cpp  album.h  albumart.cpp  albumart.h  filesystemmusiclibrary.cpp  filesystemmusiclibrary.h  libraryitem.cpp  libraryitem.h  librarysource.h  metadata.cpp  metadata.h  musicdb.cpp  musicdb.h  musiclibrary.cpp  musiclibrary.h  musiclibraryfactory.cpp  musiclibraryfactory.h  scanner.cpp  scanner.h  subscribers.h  track.cpp  track.h  upnpalbumfetcher.cpp  upnpalbumfetcher.h  upnplibrarysource.h  upnpmusiclibrary.cpp  upnpmusiclibrary.h
src/Plugins/: Plugins.vcxproj  dbusplugin.cpp  dbusplugin.h  lastfmplugin.cpp  lastfmplugin.h  mprisplayer-glue.h  mprisplayer.cpp  mprisplayer.h  mprisroot-glue.h  mprisroot.cpp  mprisroot.h  mprisroot.xml  mpristracklist-glue.h  mpristracklist.cpp  mpristracklist.h  mpristracklist.xml  notificationplugin.cpp  notificationplugin.h
src/ui/: addupnpserverdlg.cpp  addupnpserverdlg.h  albuminfoview.cpp  albuminfoview.h  albummodel.cpp  albummodel.h  albumview.cpp  albumview.h  basiclayout.cpp  basiclayout.h  cellrendereralbum.cpp  cellrendereralbum.h  cellrendererhoverbutton.cpp  cellrendererhoverbutton.h  detailedalbumlayout.cpp  detailedalbumlayout.h  detailedalbumview.cpp  detailedalbumview.h  dispatchedsubscriber.h  librarychangedispatcher.cpp  librarychangedispatcher.h  mainwindow.cpp  mainwindow.h  mouseawaretreeview.cpp  mouseawaretreeview.h  nowplayingview.cpp  nowplayingview.h  overlay.h  playqueuemodel.cpp  playqueuemodel.h  playqueueview.cpp  playqueueview.h  pluginview.cpp  pluginview.h  pluginwidget.cpp  pluginwidget.h  preferencesdlg.cpp  preferencesdlg.h  searchbar.cpp  searchbar.h  (+21 more)
test/: audiobuffertest.cpp  mpegutilstest.cpp  musicdbtest.cpp  playqueuetest.cpp  scannertest.cpp  settingstest.cpp  testclasses.h  testfunctions.h  testrunner.cpp
testtools/: fileinfo.cpp
wiki/: Screenshots.wiki  faq.wiki
