CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(VERSION 2.8)

PROJECT(gejengel)
SET(PACKAGE "gejengel")
SET(PACKAGE_NAME "Gejengel")
SET(PACKAGE_VERSION_MAJOR 1)
SET(PACKAGE_VERSION_MINOR 6)
SET(PACKAGE_VERSION_PATCH 0)
SET(PACKAGE_LOCALE_DIR ${CMAKE_INSTALL_PREFIX}/share/locale)

SET(CPACK_PACKAGE_NAME ${PACKAGE})
SET(CPACK_PACKAGE_VERSION_MAJOR ${PACKAGE_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${PACKAGE_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${PACKAGE_VERSION_PATCH})
SET(CPACK_SOURCE_GENERATOR "TBZ2")
SET(CPACK_PACKAGE_FILE_NAME $CPACK_PACKAGE_NAME)
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
set(CPACK_SOURCE_IGNORE_FILES "/build/;/debug/;/release/;/dist/;/gfx/;/inc/;/lib/;/web/;/.git/;~$;${CPACK_SOURCE_IGNORE_FILES}")
#SET(CPACK_PACKAGE_INSTALL_DIRECTORY(gejengel)
#SET(CPACK_RESOURCE_FILE_LICENSE(COPYING)
#SET(CPACK_RESOURCE_FILE_README(README)
#SET(CPACK_MONOLITHIC_INSTALL()
INCLUDE(CPack)

INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})

ADD_SUBDIRECTORY(modules/upnpframework)
GET_DIRECTORY_PROPERTY(UPNPFRAMEWORK_INCLUDE_DIRS	DIRECTORY modules/upnpframework INCLUDE_DIRECTORIES)
GET_DIRECTORY_PROPERTY(UPNPFRAMEWORK_LIBRARY_DIRS 	DIRECTORY modules/upnpframework LINK_DIRECTORIES)
GET_DIRECTORY_PROPERTY(UPNPFRAMEWORK_LIBRARIES 		DIRECTORY modules/upnpframework DEFINITION UPNPFRAMEWORK_LIBRARIES)

IF (NOT UPNP_FOUND)
	ADD_SUBDIRECTORY(modules/upnpframework/modules/utils)
	GET_DIRECTORY_PROPERTY(UTILS_INCLUDE_DIRS	DIRECTORY modules/upnpframework/modules/utils INCLUDE_DIRECTORIES)
	GET_DIRECTORY_PROPERTY(UTILS_LIBRARIES		DIRECTORY modules/upnpframework/modules/utils DEFINITION UTILS_LIBRARIES)
ENDIF (NOT UPNP_FOUND)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(po)

CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/config.h.in ${CMAKE_BINARY_DIR}/config.h)
CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/data/gejengel.desktop.in ${CMAKE_BINARY_DIR}/gejengel.desktop)
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/CMakeUninstall.cmake.in" "${CMAKE_CURRENT_BINARY_DIR}/CMakeUninstall.cmake" IMMEDIATE @ONLY)

INSTALL(FILES ${CMAKE_BINARY_DIR}/gejengel.desktop DESTINATION share/applications/)

ADD_CUSTOM_TARGET(uninstall COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/CMakeUninstall.cmake)
